k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-container
          image: "${REGISTRY}/cart-service:${TAGS}"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 5000
